Added rain1's new user forth starting script, which is not actually required for bootstrapping but rather convenience
Added Most primitive raw string support to stage2 lisp
Added integer->char and char->integer to stage2 lisp
Added string->list primitive to stage2 lisp
Added char? primitive to stage2 lisp
Added string? primitive to stage2 lisp

** Changed
Minor refactor of stage3 FORTH by reepa
Stage3 FORTH WHILE's compile-time stack effect is now consistent with gforth
Changed behavior of stage2 FORTH's CREATE to better match the way it usually works.
Stage0 vm now will show an error message if the size of the rom exceeds the available memory
Modified stage3 forth library to dump upper case hex values
Modified stage3 forth JUMP-TO, to support 32bit absolute addresses

** Fixed
Updated checksums to reflect changes in stage2 FORTH
Fixed dis behavior in regards to hex values in strings
Updated checksums to reflect changes in stage2 Lisp
Added missing library reference form stage2 lisp High level prototype
Fixed bug in stage2 FORTH PRINT function

** Removed
the HERE and DP! are gone from ' now in stage3 FORTH

* 0.0.8 - 2017-06-17
** Added
Incorporated High level prototypes into makefile
Added logic to catch non-existent input files and report a useful error message
Added DP! to stage2 forth
Added EXECUTE to stage2 forth
Added ABORT to stage2 forth
Added string print and address to output of High level prototype disassembler
Added initial prototype library for forth developers who want better ANS support
Expanded stage0 VM Halcode to provide a way to lookup total amount of physical memory

** Changed
Extended VPATH in makefile to shorten dependency names
Updated checksum for stage2 forth
Reversed the order of operands in stage2 forth arithmetic
Modified webIDE to leverage new enhanced disassembler output
Altered stage2 forth KEY to echo keypress so that S" and similiar functions behave like gforth