@@ -1,7 +1,7 @@
 8f465d3ec1cba00a7d024a1964e74bb6d241f86a73c77d95d8ceb10d09c8f7b9  roms/CAT
 59f0502748af32e3096e026a95e77216179cccfe803a05803317414643e2fcec  roms/DEHEX
 d7967248be71937d4fa1f38319a5a8473a842b1f6806b977e5fb184565bde0a4  roms/forth
-ff5955ddee3e35bb1d7c11e0d3030f4ff4dcdcde5e87c3062b775c2dd5e9bb6b  roms/lisp
+e0a4f0fb97d0c40ffe3e69dbf226d6e12be61068faa4543c4b92aec35c2b0c60  roms/lisp
 2b9727381aec15a504c0898189fbc2344209d8e04451e3fa5d743e08e38f64cf  roms/M0
 24a4d74eb2eb7a82e68335643855658b27b5a6c3b13db473539f3e08d6f26ceb  roms/SET
 0a427b14020354d1c785f5f900677e0059fce8f8d4456e9c19e5528cb17101eb  roms/stage0_monitor
